# cuttle-vm

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.windows.json  LICENSE  README.md  cuttle-vm.project
scripts/: get-deps.sh
src/: CMakeLists.txt  context.cpp  context.hpp  context_methods.hpp  function.hpp  gc.hpp  gc_type_error.hpp  interpreter.cpp  interpreter.hpp  name_error.hpp  parse_error.hpp  special_char_conversion_error.hpp  std.cpp  std.hpp  type_argn_error.hpp  type_error.hpp  value.cpp  value.hpp  value_methods.hpp  vm_context.cpp  vm_context.hpp  vm_context_methods.hpp  vm_error.hpp  vm_function.hpp  vm_value.cpp  vm_value.hpp  vm_value_methods.hpp
src/std/: array.cpp  boolean.cpp  integral.cpp  real.cpp  state.cpp  string.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp  test.hpp  test_context.cpp  test_context.hpp  test_file_access.cpp  test_file_access.hpp  test_interpreter.cpp  test_interpreter.hpp  test_manager.cpp
tests/std/: test_array.cpp  test_array.hpp  test_boolean.cpp  test_boolean.hpp  test_integral.cpp  test_manager.cpp  test_manager.hpp  test_real.cpp  test_real.hpp
